# cit-sci-traits

./: conda-spc.txt  pyproject.toml  requirements_charlie.txt
deprecated/: README.md  conda-list_full.txt  environment.yml  environment_full.yml  pyproject_poetry_backup.toml  requirements-pip_full.txt  run_experiments.sh  run_splits.sh
deprecated/charlie_notes/: complete_pipeline_notes.md  global_trait_mapping_motivation.md  pipeline_presentation_notes.md  proposal_notes.md  run_shrub_tree_grass_55km_splits.py
deprecated/charlie_notes/deprecated/: condensed_notes_splits.md  gpt_spatial_trait_mapping_pipeline.md  notes_splits.md  raw_pipeline_notes.md
experiments/: run_all_experiments.sh
experiments/configs/: exp_GBM_no_stack_bag.yaml  exp_GBM_no_stack_no_bag.yml  exp_GBM_stack_bag.yaml  exp_GBM_stack_no_bag.yaml  exp_MITRA_no_stack_no_bag.yml  exp_TABM_no_stack_bag .yaml  exp_TABM_no_stack_no_bag.yml  exp_TABM_stack_bag.yaml  exp_TABM_stack_no_bag.yaml  exp_TABPFN_no_stack_no_bag.yml  exp_test.yml  exp_test_local.yml
src/conf/: conf.py
src/features/: calc_spatial_autocorr_gpu.py  skcv_splits_charlie.py
src/models/: autogluon.py  autogluon_old.py  train_models_experiment.py
src/utils/: dataset_utils.py  log_utils.py  wandb_utils.py
