[project]
name = "cit-sci-traits"
version = "0.1.0"
description = "Modeling environment for trait prediction experiments"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "python-dotenv>=1.0.1,<2",
  "pandas>=2.2.1,<3",
  "numpy>=1.26.4,<2",
  "pyyaml>=6.0.1,<7",
  "pyarrow>=16.0.0,<21",
  "scikit-learn>=1.4,<1.8",
  "joblib>=1.4.2,<2",
  "tqdm>=4.66.4,<5",
  "python-box~=7.0",
  "rioxarray>=0.15.1,<1",
  "rasterio>=1.3.9,<2",
  "pyogrio>=0.7.2,<1",
  "geopandas>=0.14.3,<1",
  "dask[dataframe]>=2024.4.2,<2027",
  "dask-geopandas>=0.3.1,<1",
  "h3>=3.7.7,<4",
  "pykrige>=1.7.1,<2",
  "utm>=0.7.0,<1",
  "autogluon-tabular[all]>=1.1.0,<2",
  "statsmodels>=0.14.2,<1",
  "tabulate>=0.9.0,<1",
  "rio-cogeo>=5.3.6,<6",
  "ease-grid>=0.2,<1",
  "verstack>=4.1.4,<5",
  "dvc-ssh>=4.2.1,<5",
  "dvc-gs>=3.0.2,<4",
  "wandb>=0.25.0,<1",
  "ray>=2.52.1,<3"
]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.8.3,<4",
  "seaborn>=0.13.2,<1",
  "bokeh>=3.4.1,<4",
  "cartopy>=0.23.0,<1",
  "adjusttext>=1.3.0,<2",
]

notebook = [
  "ipykernel>=6.29.3,<7",
  "ipywidgets>=8.1.2,<9",
]

dev = [
  "pre-commit>=3.6.2,<4",
  "pytest>=8.1.1,<9",
  "pylint>=3.1.0,<4",
  "pylint-pytest>=1.1.7,<2",
  "pytest-mock>=3.12.0,<4",
  "paramiko>=3.4.0,<4",
  "earthengine-api>=1.4.5,<2",
]

profiling = [
  "line_profiler>=4,<5",
  "scalene>=1.5.51,<2",
]

cuda = [
  "cupy-cuda11x>=13.3.0,<14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false